Fixing table alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,5 +34,4 @@ h3 {
 
 table {
     text-align: left;
-    width: 50%;
 }
